# artifact-coordination-2026-phyelds

./: .env  .gitignore  CHANGELOG.md  docker-compose.yml  package-lock.json  pyproject.toml  release.config.js
docker/: Dockerfile
src/fl/: FBFLClient.py  TestSetEvalMonitor.py  simulation.py
src/fl/learning/: __init__.py  model.py
src/patterns/: CustomDrawings.py  CustomRenderMonitor.py  channel.py  scr.py
src/vmas-integration/: VMASRenderMonitor.py  VicsekFlocking.py
